--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^2.1.10"
   },
   "dependencies": {
-    "laravel-echo": "^1.3.1"
+    "laravel-echo": "^1.3.1",
+    "vue-timeago": "^3.3.5"
   }
 }
