--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "5.5.*",
         "laravel/horizon": "^0.1.0",
         "laravel/tinker": "~1.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "rap2hpoutre/laravel-log-viewer": "^0.10.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
