Simplify navbar and add github badge

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,12 @@ MAIL_ENCRYPTION=null
 PUSHER_HOST=localhost
 PUSHER_PORT=6001
 PUSHER_ENCRYPTED=false
+
+INVISIBLE_RECAPTCHA_SITEKEY=
+INVISIBLE_RECAPTCHA_SECRETKEY=
+
+INVISIBLE_RECAPTCHA_BADGEHIDE=
+INVISIBLE_RECAPTCHA_DATABADGE=
+INVISIBLE_RECAPTCHA_TIMEOUT=
+INVISIBLE_RECAPTCHA_DEBUG=
+
