Compile prod assets

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=2e9678f8d4da84ed1b80",
+    "/css/app.css": "/css/app.css?id=f53842d3b189f7ea0031"
 }
